JDK 17 support
Signed-off-by: Amit Singh <snghes@amazon.com>